--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <form action="accion.php" method="post">
  <p>Su nombre completo: <input type="text" name="nombre" /></p>
  <p>Su edad: <input type="text" name="edad" /></p>
+ <p>Su sexo: <input type="text" name="edad" /></p>
+ <p>Su grado: <input type="text" name="edad" /></p>
  <p><input type="submit" /></p>
 </form>
+
