--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
  <p>Su edad: <input type="text" name="edad" /></p>
  <p>Su sexo: <input type="text" name="edad" /></p>
  <p>Su grado: <input type="text" name="edad" /></p>
+ <p>Su tipo de sangre: <input type="text" name="edad" /></p>
  <p><input type="submit" /></p>
 </form>
 
