--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
  <p>Su sexo: <input type="text" name="edad" /></p>
  <p>Su grado: <input type="text" name="edad" /></p>
  <p>Su tipo de sangre: <input type="text" name="edad" /></p>
+ <p>Su curp: <input type="text" name="edad" /></p>
  <p><input type="submit" /></p>
 </form>
 
