--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  <p>Su grado: <input type="text" name="edad" /></p>
  <p>Su tipo de sangre: <input type="text" name="edad" /></p>
  <p>Su curp: <input type="text" name="edad" /></p>
+  <p>Su email: <input type="text" name="edad" /></p>
  <p><input type="submit" /></p>
 </form>
 
